--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -14,663 +14,14 @@ body{
 .bg{
     background-color: #eaeaea;
 }
-header{
-    position: sticky;
-    z-index: 100;
-    width: 100%;
-    top: 0;
-    font-family: $font;
-    .mainBg{
-        background-image: $gradiente;
-        div{
-            div{
-                .navbar-text{
-                    list-style: none;
-                    font-family: $font;
-                    .usuario{
-                        width: 40px;
-                        height: 40px;
-                        margin-right: 0.5rem;
-                    }
-                }
-            
-            }
-        }
-    }
-}
 
-main{
-    .carousel{
-        margin-top: 4.7rem;
-        div{
-            .vitrina{
-            height: 300px;
-            object-fit: cover;
-            @media (min-width:992px) {
-                height: auto;
-            }
-            }
-            div{
-                .titulo-vitrina{
-                    font-size: 35px;
-                    font-weight: bold;
-                    font-family: $font;
-                    @media (max-width:575px){
-                        font-size: 20px;
-                    }
-                    @media (min-width:576px){
-                        font-size: 25px;  
-                    }
-                    @media (min-width:768px){
-                        font-size: 30px;
-                    }
-                    @media (min-width:992px) {
-                        font-size: 40px;                    }
-                }
-                .texto-vitrina{
-                    font-size: 25px;
-                    font-family: $font;
-                }
-            } 
-        }
-    }
-    .categorias{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 5rem 1rem 3rem;
-        .tarjeta{
-            text-align: center;
-            margin: 2rem 1rem 2rem 1rem;
-            font-size: 20px;
-            @media (max-width:575px){
-                margin: 0 2rem;
-                font-size: 18px;
-            }
-            @media (min-width:576px){
-                flex-wrap: nowrap;
-                font-size: 1.2rem;
-            }
-            @media (min-width:768px){
-                margin: 0 2rem;
-            }
-            @media (min-width:992px){
-                margin: 0 3rem;
-            }
-            .icono{
-                width: 200px;
-                padding: 2rem;
-                @media (max-width:575px){
-                    width: 160px;
-                    padding: 1rem;
-                }
-                @media (min-width:576px){
-                    padding: 2rem;
-                }
-                @media (min-width:768px){
-                    width: 140px;
-                }
-                @media (min-width:992px){
-                    width: 140px;
-                    padding: 1rem;
-                }
-            }
-        }
-        @media (max-width:575px){
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            grid-auto-columns: 1fr;
-            grid-auto-flow: row;
-            grid-template-areas:
-                "tarjeta tarjeta"
-                "tarjeta tarjeta";
-        .tarjeta h3{
-            font-size: 20px;
-        }
-        }
-    }
-    .subtitulo{
-        display: block;
-        font-size: 30px;
-        text-align: center;
-        @media (max-width:575px){
-            font-size: 1.5rem;
-            margin: 2rem 0 0 0;
-        }
-        @media (min-width:576px){
-            font-size: 1.5rem;
-        }
-        @media (min-width:992px) {
-            font-size: 1.8rem;
-        }
-    }
-    .slider-productos{
-        display: flex;
-        flex-wrap: nowrap;
-        padding: 2rem 0 1rem 0;
-        @media (max-width:575px){
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            scrollbar-gutter: auto;
-        }
-        @media (min-width:576px){
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            scrollbar-gutter: auto;
-        }
-        @media (min-width:768px){
-            display: flex;
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            justify-content: space-between;
-            scrollbar-gutter: auto;
-        }
-        .tarjeta2{
-            text-align: center;
-            font-size: 20px;
-            @media (max-width:575px){
-                font-size: 1.1rem;
-            }
-            @media (min-width:576px){
-                font-size: 1.1rem;
-            }
-            .joya{
-                width: 300px;
-                padding: 0.5rem;
-                border-radius: 5%;
-            }
-            .precio{
-                color:$morado;
-                font-weight: bold;
-            }
-        }
-    }
-    .botonver{
-        display: flex;
-        flex: wrap;
-        justify-content: center;
-        .vertodo{
-            display: flex;
-            border-radius: 50px;
-            padding: 0.5rem 1rem;
-            background-color: $morado;
-            border-color: $morado;
-            margin-bottom: 1rem;
-            &:hover{
-                background-color: white;
-                border-radius: 50px;
-                border-color: $morado;
-                transform: scale(1.2,1.2);
-            }
-            .vertodo-texto{
-                text-decoration: none;
-                color: white;
-                font-size: 16px;
-                &:hover{
-                    text-decoration: none;
-                    color: $morado;
-                }
-            }
-        }
-    }
-    .titulo{
-        display: flex;
-        justify-content: center;
-        font-size: 35px;
-        margin: 2rem auto;
-    }
-    .containerSomos{
-        font-family: $font;
-        height: auto;
-        padding: 0 0.5rem;
-        .text2{
-            text-align: justify;
-        }
-        .imgperfil{
-            margin-bottom: 1rem;
-            @media (max-width:575px){
-                grid-area: imgperfil;
-                width: auto;
-            }
-            @media (min-width:576px){
-                width: 100%;
-            }
-            @media (min-width:992px){
-                width: 45%;
-                height: max-content;
-                
-            }
-        }
-        .somos{
-        gap: 1.2rem;
-        margin: 0 1rem;
-        @media (max-width:575px){
-            flex-wrap: wrap;
-            margin: 0 0.5rem;
-        }
-        @media (min-width:576px){
-            flex-wrap: wrap;
-            margin: 0 0.5rem;
-        }
-        @media (min-width:992px){
-            display: flex;
-            flex-wrap: nowrap;
-        }
-        }
-        .tituloVentajas{
-            font-size: 2rem;
-            text-align: center;
-            margin: 2rem 0;
-            @media (max-width:575px){
-                font-size: 30px;
-            }
-        }
-        .ventajas{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            text-align: center;
-            @media (min-width:992px){
-                flex-wrap: nowrap;
-            }
-            .tarjeta{
-                @media (max-width:575px){
-                    margin: 0 2rem;
-                    font-size: 18px;
-                    
-                }
-                @media (min-width:576px){
-                    margin: 0 2rem;
-                }
-                @media (min-width:992px){
-                    margin: 0;
-                }
-            }
-        }
-    }
-    .tituloGrid{
-        grid-area: tituloGrid;
-        text-align: center;
-        margin-top: 2rem;
-    }
-    .container{
-        justify-content: center;
-        padding: 15px 0;
-        height: 140vh;
-        display: grid;
-        grid-template-columns: 2fr 2fr 2fr;
-        grid-template-rows: 0.2fr 1fr 0.2fr 1fr 3fr;
-        grid-auto-columns: 2fr;
-        gap: 15px;
-        grid-auto-flow: row;
-        grid-template-areas:
-        "cat1 none cat3"
-        "cat1 cat2 cat3"
-        "cat4 cat2 cat6"
-        "cat4 cat5 cat6"
-        "none1 cat5 none2";
-        @media (min-width:576px){
-            padding: 0 0.5rem;
-            max-width: max-content;
-            height: auto;
-            grid-template-rows: 0.2fr 0.8fr 0.2fr 0.8fr 0.2fr;
-        }
-        @media (min-width:768px){
-            max-width: max-content;
-            height: auto;
-            grid-template-rows: 0.2fr 0.8fr 0.2fr 0.8fr 0.2fr;
-        }
-        @media (min-width:992px){
-            max-width: 80%;
-            height: auto;
-        }
-        .cat1{
-        grid-area: cat1; 
-        width: auto;
-        }
-        .cat2{
-        grid-area: cat2; 
-        width: auto;
-        }
-        .cat3{
-        grid-area: cat3; 
-        width: auto;
-        }
-        .cat4{
-        grid-area: cat4; 
-        width: auto;
-        }
-        .cat5{
-        grid-area: cat5; 
-        width: auto;
-        }
-        .cat6{
-        grid-area: cat6; 
-        width: auto;
-        }
-    }
-    @media (max-width:575px){
-        .slider-container{
-            display: flex;
-            justify-content: space-between;
-            height: 53vh;
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            scrollbar-gutter: auto;
-        }
-        .slider-container img{
-            scroll-snap-align: center;
-        }
-    }
-    .containerBlog{
-        font-family:$font;
-        height: 60vh;
-        padding: 0 0.5rem;
-        display: grid;
-        grid-auto-columns: 2fr;
-        gap: 20px 30px;
-        grid-auto-flow: row;
-        @media (max-width:575px){
-            height: auto;
-            grid-template-columns: 1fr;
-            grid-template-rows: 0.1fr 1fr 0.1fr 0.1fr;
-            grid-auto-columns: 1fr;
-            grid-template-areas: 
-            "tituloBlog"
-            "blog"
-            "subtituloCompras"
-            "compras"
-            "imgCompras";
-        }
-        @media (min-width:576px) {
-            height: auto;
-            grid-template-columns: 2fr;
-            grid-template-rows: 0.1fr 1fr 0.1fr 0.1fr;
-            grid-template-areas: 
-            "tituloBlog"
-            "blog"
-            "subtituloCompras"
-            "compras"
-            "imgCompras";
-        }
-        @media (min-width:992px){
-            grid-template-columns: 2fr 2fr;
-            grid-template-rows:  0fr 1fr 1.5fr;
-            grid-template-areas:
-            "tituloBlog subtituloCompras"
-            "blog compras"
-            "blog imgCompras";
-        }
-        .tituloBlog{
-            grid-area: tituloBlog;
-        }
-        .subtituloCompras{
-            grid-area: subtituloCompras;
-            @media (max-width:575px){
-                margin-top: 2rem; 
-            }
-            @media (min-width:576px){
-                margin-top: 2rem;
-            }
-            @media (min-width:992px){
-                margin-top: 0;
-            }
-        }
-        .blog{
-            grid-area: blog;
-            .text2{
-                text-align: justify;
-            }
-        }
-        .compras{
-            grid-area: compras;
-            .text2{
-                text-align: justify;
-                list-style: none;
-                padding-left: 0;
-            }
-        }
-        .imgCompras{
-            grid-area: imgCompras;
-            @media (min-width:576px) {
-                margin: 0 auto
-            }
-        }
-        .tituloContainer{
-            margin-left: 1rem;
-            text-align: center;
-            font-size: 2rem;
-            @media (max-width:575px){
-                font-size: 25px;
-            }
-        }
-    }
-    .banner{
-        justify-content: center;
-    }
-    .containerUsuario{
-        padding: 1rem 1rem;
-        margin: 0 auto;
-        justify-content: center;
-        @media (min-width:576px){
-            display: flex;
-            flex-wrap: wrap;
-            height: auto;
-            width: auto;
-            margin-bottom: 2rem;
-        }
-        @media (min-width:768px){
-            display: flex;
-            flex-wrap: wrap;
-            width: auto;
-            margin-bottom: 2rem;
-        }
-        @media (min-width:992px) {
-            padding: 0 1rem;
-            width: 80vw;
-            height: auto;
-            display: grid;
-            grid-auto-columns: 1fr;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows:  0.2fr 3fr;
-            grid-auto-flow: row;
-            grid-template-areas:
-            "tituloRegistrate tituloInicio"
-            "formularioRegistro formularioInicio";
-        }
-        .casilla{
-            padding: 0.5rem 0;
-        }
-        .tituloCuenta{
-            text-align: center;
-            font-size: 26px;
-            background-color: aliceblue;
-            padding: 1rem;
-            margin-right: 0 1rem 0 0.5rem; 
-            @media (max-width:575px){
-                font-size: 1.5rem;
-                padding: 0.5rem 8.8rem;
-                margin: 1rem auto;
-            }
-            @media (min-width:576px){
-                padding: 0.5rem 8rem;
-                margin-bottom: 1rem;
-            }
-            @media (min-width:768px){
-                padding: 0.5rem 15rem;
-                margin-bottom: 2rem;
-            }
-            @media (min-width:992px){
-                width: 45vw;
-                display: flex;
-                justify-content: flex-start;
-            }
-        }
-        .tituloRegistrate{
-            grid-area: tituloRegistrate;
-        }
-        .tituloInicio{
-            grid-area: tituloInicio;
-        }
-        .formularioRegistro{
-            grid-area: formularioRegistro;
-            font-size: 18px;
-            padding: 0 1rem;
-            @media (max-width:575px){
-                font-size: 1rem;
-                margin-bottom: 2rem;
-            }
-            @media (min-width:576px){
-                margin-bottom: 2rem;
-            }
-        }
-        .formularioInicio{
-            grid-area: formularioInicio;
-            font-size: 18px;
-            padding: 0 1rem;
-            @media (max-width:575px){
-                font-size: 1rem;
-            }
-        }
-        @media (max-width:575px){
-            display: flex;
-            flex-wrap: wrap;
-            height: auto;
-            margin-bottom: 2rem;
-            max-width: max-content;
-        }
-    }
-    .slider-joyeros{
-        display: flex;
-        flex-wrap: nowrap;
-        padding-left: 10px;
-        padding-right: 10px;
-        @media (max-width:575px){
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            justify-content: space-between;
-            margin-bottom: 1rem;
-            padding: 0 1rem;
-        }
-        @media (min-width:576px) {
-            overflow-x: scroll;
-            scroll-snap-type: x mandatory;
-            justify-content: space-between;
-            margin-bottom: 1rem;
-            padding: 0 0.5rem;
-        }
-        img{
-            @media (max-width:575px){
-                scroll-snap-align: center;
-                scrollbar-gutter: auto;
-                margin: 0 0.5rem;
-            }
-            @media (min-width:576px){
-                scroll-snap-align: center;
-                scrollbar-gutter: auto;
-                margin: 0 0.5rem;
-                width: 50%;
-            }
-            @media (min-width:992px) {
-                width: 500px;  
-            }
-        }
-    }
-    .contenedorJoyeros{
-        @media (min-width:768px){
-            display: flex;
-            flex-wrap: nowrap;
-            max-width: max-content;
-        }
-        @media (min-width:992px){
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            margin: 2rem auto; 
-        }
-        .imgJoyeros{
-            @media (min-width:768px){
-                width: 28.5%;
-            }
-        }
-    }
-    .banner{
-        display: flex;
-        flex-wrap: nowrap;
-        padding-left: 10px;
-        padding-right: 10px;
-        img{
-            @media (max-width:575px){
-                width: 100%;
-                margin: 0 2rem;
-                border-radius: 5px;
-            }
-            @media (min-width:576px){
-                width: 100%;
-                margin: 0 2rem 1rem 2rem;
-                border-radius: 5px;
-            }
-            @media (min-width:992px) {
-                width: 88%;
-            }
-        } 
-    }
-}
-
-footer{
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 30px;
-    padding-bottom: 50px;
-    margin: 1rem auto 0;
-    background-image: $gradiente;
-    justify-content: center;
-    justify-content: space-evenly;
-    @media (max-width:575px){
-        flex-direction: column;
-    }
-    @media (min-width:576px){
-        flex-wrap: nowrap;
-    }
-    a{
-        .textoLogo{
-            width: 180px;
-            height: auto;
-            display: flex;
-            margin: 0 auto;
-            padding: 10px 0;
-            @media (max-width:575px){
-                margin: 0 2rem 1rem 2rem;
-            }
-        }
-    }
-    .pie{
-        li{
-            list-style: none;
-            color: black;
-            a{
-                text-decoration: none;
-                color: black;
-            }
-        }
-        .negrita{
-            font-size: 16px;
-            font-weight: bold;
-            text-decoration: none;
-            color: black;
-        }
-        @media (max-width:575px){
-            padding-left: 2rem;
-        }
-        @media (min-width:576px){
-            font-size: 0.8rem;
-            padding-left: 0;
-        }
-    }
-    
-}
-
-
+@import "header";
+@import "index";
+@import "nosotros";
+@import "joyas";
+@import "blog";
+@import "joyeros";
+@import "cuenta";
+@import "footer";
 
 
